--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "clean": "forge clean",
     "slither": "slither .",
     "test": "npm run test:unit",
-    "test:unit": "forge test --match-path ./test/unit/utils/RateLimitedV2.t.sol -vvv",
+    "test:unit": "forge test --match-path ./test/unit/** -vvv",
+    "test:coreref": "forge test --match-path ./test/unit/core/CoreRef.t.sol/ -vvvvv --match-test testSetCoreGovSucceeds",
     "test:proposals": "forge test --match-path ./test/** --fork-url https://eth-mainnet.g.alchemy.com/v2/6JDkeTZv5fE6ocScgKhoepESgcQ3IGTt -vvv",
     "test:integration": "forge test --match-path ./test/integration/** --fork-url https://eth-mainnet.g.alchemy.com/v2/6JDkeTZv5fE6ocScgKhoepESgcQ3IGTt -vvv",
     "coverage": "forge coverage --fork-url https://eth-mainnet.g.alchemy.com/v2/6JDkeTZv5fE6ocScgKhoepESgcQ3IGTt --match-path './test/**' --report lcov --report summary",
