--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "test": "npm run test:unit",
     "test:unit": "forge test --match-path ./test/unit/** -vvv",
     "test:coreref": "forge test --match-path ./test/unit/core/CoreRef.t.sol/ -vvvvv --match-test testSetCoreGovSucceeds",
+    "test:testDelegate": "forge test --match-path ./test/unit/tokens/ERC20MultiVotes.t.sol -vvvvv --match-test testDelegate",
+    "test:testUnDelegate": "forge test --match-path ./test/unit/tokens/ERC20MultiVotes.t.sol -vvvvv --match-test testDecrementOverWeightFails",
+    "test:borrow": "forge test --match-path ./test/unit/loan/LendingTerm.t.sol -vvvvv --match-test testBorrowSuccess",
+    "test:hash": "forge test --match-path ./test/unit/loan/LendingTerm.t.sol -vvvvv --match-test testHashCollision",
     "test:proposals": "forge test --match-path ./test/** --fork-url https://eth-mainnet.g.alchemy.com/v2/6JDkeTZv5fE6ocScgKhoepESgcQ3IGTt -vvv",
     "test:integration": "forge test --match-path ./test/integration/** --fork-url https://eth-mainnet.g.alchemy.com/v2/6JDkeTZv5fE6ocScgKhoepESgcQ3IGTt -vvv",
     "coverage": "forge coverage --fork-url https://eth-mainnet.g.alchemy.com/v2/6JDkeTZv5fE6ocScgKhoepESgcQ3IGTt --match-path './test/**' --report lcov --report summary",
