Checked lendking term borrow, repay, repayPartitial

--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "test:coreref": "forge test --match-path ./test/unit/core/CoreRef.t.sol/ -vvvvv --match-test testSetCoreGovSucceeds",
     "test:testDelegate": "forge test --match-path ./test/unit/tokens/ERC20MultiVotes.t.sol -vvvvv --match-test testDelegate",
     "test:testUnDelegate": "forge test --match-path ./test/unit/tokens/ERC20MultiVotes.t.sol -vvvvv --match-test testDecrementOverWeightFails",
-    "test:testGage": "forge test --match-path ./test/unit/tokens/ERC20MultiVotes.t.sol -vvvvv --match-test testDecrementOverWeightFails",
+    "test:testGauge": "forge test --match-path ./test/unit/tokens/ERC20Gauges.t.sol -vvvvv --match-test testDecrementError",
     "test:borrow": "forge test --match-path ./test/unit/loan/LendingTerm.t.sol -vvvvv --match-test testBorrowSuccess",
     "test:hash": "forge test --match-path ./test/unit/loan/LendingTerm.t.sol -vvvvv --match-test testHashCollision",
+    "test:distribute": "forge test --match-path ./test/unit/tokens/ERC20RebaseDistributor.t.sol -vvvvv --match-test testDistributeFuzz",
+    "test:lendingterm": "forge test --match-path ./test/unit/loan/LendingTerm.t.sol -vvvvv --match-test testBorrowFailDebtCeilingReached",
     "test:proposals": "forge test --match-path ./test/** --fork-url https://eth-mainnet.g.alchemy.com/v2/6JDkeTZv5fE6ocScgKhoepESgcQ3IGTt -vvv",
     "test:integration": "forge test --match-path ./test/integration/** --fork-url https://eth-mainnet.g.alchemy.com/v2/6JDkeTZv5fE6ocScgKhoepESgcQ3IGTt -vvv",
     "coverage": "forge coverage --fork-url https://eth-mainnet.g.alchemy.com/v2/6JDkeTZv5fE6ocScgKhoepESgcQ3IGTt --match-path './test/**' --report lcov --report summary",
